--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "license": "MIT",
   "dependencies": {
     "@kavience/react-table": "^0.0.4",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "chalk": "^2.4.1",
@@ -31,6 +33,7 @@
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
     "react-simple-image-slider": "^2.4.1",
+    "react-stripe-checkout": "^2.6.3",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
